# f1scraper

./: .editorconfig  Cargo.toml  README.md
src/: lib.rs  parse.rs  scrape.rs
src/format/: mod.rs  race.rs  races.rs
src/parse/: mod.rs  races.rs
src/parse/driver/: mod.rs  result.rs  summary.rs
src/parse/race/: mod.rs  result.rs  summary.rs
src/parse/races/: mod.rs  result.rs  summary.rs
src/parse/team/: mod.rs  result.rs  summary.rs
src/scrape/: driver.rs  fastestlap.rs  mod.rs  race.rs  team.rs
src/types/: driver.rs  fastestlap.rs  mod.rs  race.rs  team.rs
