[package]
name = "f1_scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.68"
clap = { version = "4.1.1", features = ["derive"] }
chrono = "0.4.23"
env_logger = "0.10.0"
log = "0.4.0"
reqwest = { version = "0.11.12", features = ["blocking"] }
scraper = "0.14.0"
selectors = "0.22.0"

[[bin]]
name = "f1scraper"
path = "src/bin/f1scraper/main.rs"
